// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Core/> should render Core with search route 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Core
    location={
      Object {
        "pathname": "/search",
      }
    }
    returnToMainPage={[Function]}
    setEmptyResults={[Function]}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
    user={
      Object {
        "fullItem": Object {
          "isActive": false,
        },
        "inputValue": "",
        "results": Object {
          "data": Array [],
        },
        "resultsCount": -1,
        "search": "title",
        "searchInfo": Object {},
        "sort": "releaseDate",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Switch>
        <Route
          component={[Function]}
          exact={true}
          path="/not_found"
        />
        <Route
          path="/"
        >
          <div
            className="core-page"
          >
            <Switch>
              <Route
                path="/film/:id"
              >
                <Connect(Header)>
                  <Route
                    component={[Function]}
                    path="/film/:id"
                  />
                </Connect(Header)>
              </Route>
              <Route
                component={[Function]}
                path="/"
              />
              <Redirect
                push={false}
                to="/not_found"
              />
            </Switch>
            <Connect(ResultsBar) />
            <Switch>
              <Route
                component={[Function]}
                exact={true}
                path="/"
              />
              <Route
                component={[Function]}
                path="/film/:id"
              />
              <Route
                component={[Function]}
                path="/search"
              />
              <Redirect
                push={false}
                to="/not_found"
              />
            </Switch>
            <Footer />
          </div>
        </Route>
      </Switch>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Route
            component={[Function]}
            exact={true}
            path="/not_found"
          />,
          <Route
            path="/"
          >
            <div
              className="core-page"
            >
              <Switch>
                <Route
                  path="/film/:id"
                >
                  <Connect(Header)>
                    <Route
                      component={[Function]}
                      path="/film/:id"
                    />
                  </Connect(Header)>
                </Route>
                <Route
                  component={[Function]}
                  path="/"
                />
                <Redirect
                  push={false}
                  to="/not_found"
                />
              </Switch>
              <Connect(ResultsBar) />
              <Switch>
                <Route
                  component={[Function]}
                  exact={true}
                  path="/"
                />
                <Route
                  component={[Function]}
                  path="/film/:id"
                />
                <Route
                  component={[Function]}
                  path="/search"
                />
                <Redirect
                  push={false}
                  to="/not_found"
                />
              </Switch>
              <Footer />
            </div>
          </Route>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "component": [Function],
            "exact": true,
            "path": "/not_found",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <div
              className="core-page"
            >
              <Switch>
                <Route
                  path="/film/:id"
                >
                  <Connect(Header)>
                    <Route
                      component={[Function]}
                      path="/film/:id"
                    />
                  </Connect(Header)>
                </Route>
                <Route
                  component={[Function]}
                  path="/"
                />
                <Redirect
                  push={false}
                  to="/not_found"
                />
              </Switch>
              <Connect(ResultsBar) />
              <Switch>
                <Route
                  component={[Function]}
                  exact={true}
                  path="/"
                />
                <Route
                  component={[Function]}
                  path="/film/:id"
                />
                <Route
                  component={[Function]}
                  path="/search"
                />
                <Redirect
                  push={false}
                  to="/not_found"
                />
              </Switch>
              <Footer />
            </div>,
            "path": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Switch>
                  <Route
                    path="/film/:id"
                  >
                    <Connect(Header)>
                      <Route
                        component={[Function]}
                        path="/film/:id"
                      />
                    </Connect(Header)>
                  </Route>
                  <Route
                    component={[Function]}
                    path="/"
                  />
                  <Redirect
                    push={false}
                    to="/not_found"
                  />
                </Switch>,
                <Connect(ResultsBar) />,
                <Switch>
                  <Route
                    component={[Function]}
                    exact={true}
                    path="/"
                  />
                  <Route
                    component={[Function]}
                    path="/film/:id"
                  />
                  <Route
                    component={[Function]}
                    path="/search"
                  />
                  <Redirect
                    push={false}
                    to="/not_found"
                  />
                </Switch>,
                <Footer />,
              ],
              "className": "core-page",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <Route
                      path="/film/:id"
                    >
                      <Connect(Header)>
                        <Route
                          component={[Function]}
                          path="/film/:id"
                        />
                      </Connect(Header)>
                    </Route>,
                    <Route
                      component={[Function]}
                      path="/"
                    />,
                    <Redirect
                      push={false}
                      to="/not_found"
                    />,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <Connect(Header)>
                        <Route
                          component={[Function]}
                          path="/film/:id"
                        />
                      </Connect(Header)>,
                      "path": "/film/:id",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <Route
                          component={[Function]}
                          path="/film/:id"
                        />,
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "component": [Function],
                          "path": "/film/:id",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "component": [Function],
                      "path": "/",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "push": false,
                      "to": "/not_found",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <Route
                      component={[Function]}
                      exact={true}
                      path="/"
                    />,
                    <Route
                      component={[Function]}
                      path="/film/:id"
                    />,
                    <Route
                      component={[Function]}
                      path="/search"
                    />,
                    <Redirect
                      push={false}
                      to="/not_found"
                    />,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "component": [Function],
                      "exact": true,
                      "path": "/",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "component": [Function],
                      "path": "/film/:id",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "component": [Function],
                      "path": "/search",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "push": false,
                      "to": "/not_found",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Switch>
          <Route
            component={[Function]}
            exact={true}
            path="/not_found"
          />
          <Route
            path="/"
          >
            <div
              className="core-page"
            >
              <Switch>
                <Route
                  path="/film/:id"
                >
                  <Connect(Header)>
                    <Route
                      component={[Function]}
                      path="/film/:id"
                    />
                  </Connect(Header)>
                </Route>
                <Route
                  component={[Function]}
                  path="/"
                />
                <Redirect
                  push={false}
                  to="/not_found"
                />
              </Switch>
              <Connect(ResultsBar) />
              <Switch>
                <Route
                  component={[Function]}
                  exact={true}
                  path="/"
                />
                <Route
                  component={[Function]}
                  path="/film/:id"
                />
                <Route
                  component={[Function]}
                  path="/search"
                />
                <Redirect
                  push={false}
                  to="/not_found"
                />
              </Switch>
              <Footer />
            </div>
          </Route>
        </Switch>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Route
              component={[Function]}
              exact={true}
              path="/not_found"
            />,
            <Route
              path="/"
            >
              <div
                className="core-page"
              >
                <Switch>
                  <Route
                    path="/film/:id"
                  >
                    <Connect(Header)>
                      <Route
                        component={[Function]}
                        path="/film/:id"
                      />
                    </Connect(Header)>
                  </Route>
                  <Route
                    component={[Function]}
                    path="/"
                  />
                  <Redirect
                    push={false}
                    to="/not_found"
                  />
                </Switch>
                <Connect(ResultsBar) />
                <Switch>
                  <Route
                    component={[Function]}
                    exact={true}
                    path="/"
                  />
                  <Route
                    component={[Function]}
                    path="/film/:id"
                  />
                  <Route
                    component={[Function]}
                    path="/search"
                  />
                  <Redirect
                    push={false}
                    to="/not_found"
                  />
                </Switch>
                <Footer />
              </div>
            </Route>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "component": [Function],
              "exact": true,
              "path": "/not_found",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <div
                className="core-page"
              >
                <Switch>
                  <Route
                    path="/film/:id"
                  >
                    <Connect(Header)>
                      <Route
                        component={[Function]}
                        path="/film/:id"
                      />
                    </Connect(Header)>
                  </Route>
                  <Route
                    component={[Function]}
                    path="/"
                  />
                  <Redirect
                    push={false}
                    to="/not_found"
                  />
                </Switch>
                <Connect(ResultsBar) />
                <Switch>
                  <Route
                    component={[Function]}
                    exact={true}
                    path="/"
                  />
                  <Route
                    component={[Function]}
                    path="/film/:id"
                  />
                  <Route
                    component={[Function]}
                    path="/search"
                  />
                  <Redirect
                    push={false}
                    to="/not_found"
                  />
                </Switch>
                <Footer />
              </div>,
              "path": "/",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Switch>
                    <Route
                      path="/film/:id"
                    >
                      <Connect(Header)>
                        <Route
                          component={[Function]}
                          path="/film/:id"
                        />
                      </Connect(Header)>
                    </Route>
                    <Route
                      component={[Function]}
                      path="/"
                    />
                    <Redirect
                      push={false}
                      to="/not_found"
                    />
                  </Switch>,
                  <Connect(ResultsBar) />,
                  <Switch>
                    <Route
                      component={[Function]}
                      exact={true}
                      path="/"
                    />
                    <Route
                      component={[Function]}
                      path="/film/:id"
                    />
                    <Route
                      component={[Function]}
                      path="/search"
                    />
                    <Redirect
                      push={false}
                      to="/not_found"
                    />
                  </Switch>,
                  <Footer />,
                ],
                "className": "core-page",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <Route
                        path="/film/:id"
                      >
                        <Connect(Header)>
                          <Route
                            component={[Function]}
                            path="/film/:id"
                          />
                        </Connect(Header)>
                      </Route>,
                      <Route
                        component={[Function]}
                        path="/"
                      />,
                      <Redirect
                        push={false}
                        to="/not_found"
                      />,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <Connect(Header)>
                          <Route
                            component={[Function]}
                            path="/film/:id"
                          />
                        </Connect(Header)>,
                        "path": "/film/:id",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "children": <Route
                            component={[Function]}
                            path="/film/:id"
                          />,
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "class",
                          "props": Object {
                            "component": [Function],
                            "path": "/film/:id",
                          },
                          "ref": null,
                          "rendered": null,
                          "type": [Function],
                        },
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "component": [Function],
                        "path": "/",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "push": false,
                        "to": "/not_found",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <Route
                        component={[Function]}
                        exact={true}
                        path="/"
                      />,
                      <Route
                        component={[Function]}
                        path="/film/:id"
                      />,
                      <Route
                        component={[Function]}
                        path="/search"
                      />,
                      <Redirect
                        push={false}
                        to="/not_found"
                      />,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "component": [Function],
                        "exact": true,
                        "path": "/",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "component": [Function],
                        "path": "/film/:id",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "component": [Function],
                        "path": "/search",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "push": false,
                        "to": "/not_found",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Core/> should render Core with search route 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Core
    location={
      Object {
        "pathname": "/111111",
      }
    }
    returnToMainPage={[Function]}
    setEmptyResults={[Function]}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
    user={
      Object {
        "fullItem": Object {
          "isActive": false,
        },
        "inputValue": "",
        "results": Object {
          "data": Array [],
        },
        "resultsCount": -1,
        "search": "title",
        "searchInfo": Object {},
        "sort": "releaseDate",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Switch>
        <Route
          component={[Function]}
          exact={true}
          path="/not_found"
        />
        <Route
          path="/"
        >
          <div
            className="core-page"
          >
            <Switch>
              <Route
                path="/film/:id"
              >
                <Connect(Header)>
                  <Route
                    component={[Function]}
                    path="/film/:id"
                  />
                </Connect(Header)>
              </Route>
              <Route
                component={[Function]}
                path="/"
              />
              <Redirect
                push={false}
                to="/not_found"
              />
            </Switch>
            <Connect(ResultsBar) />
            <Switch>
              <Route
                component={[Function]}
                exact={true}
                path="/"
              />
              <Route
                component={[Function]}
                path="/film/:id"
              />
              <Route
                component={[Function]}
                path="/search"
              />
              <Redirect
                push={false}
                to="/not_found"
              />
            </Switch>
            <Footer />
          </div>
        </Route>
      </Switch>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Route
            component={[Function]}
            exact={true}
            path="/not_found"
          />,
          <Route
            path="/"
          >
            <div
              className="core-page"
            >
              <Switch>
                <Route
                  path="/film/:id"
                >
                  <Connect(Header)>
                    <Route
                      component={[Function]}
                      path="/film/:id"
                    />
                  </Connect(Header)>
                </Route>
                <Route
                  component={[Function]}
                  path="/"
                />
                <Redirect
                  push={false}
                  to="/not_found"
                />
              </Switch>
              <Connect(ResultsBar) />
              <Switch>
                <Route
                  component={[Function]}
                  exact={true}
                  path="/"
                />
                <Route
                  component={[Function]}
                  path="/film/:id"
                />
                <Route
                  component={[Function]}
                  path="/search"
                />
                <Redirect
                  push={false}
                  to="/not_found"
                />
              </Switch>
              <Footer />
            </div>
          </Route>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "component": [Function],
            "exact": true,
            "path": "/not_found",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <div
              className="core-page"
            >
              <Switch>
                <Route
                  path="/film/:id"
                >
                  <Connect(Header)>
                    <Route
                      component={[Function]}
                      path="/film/:id"
                    />
                  </Connect(Header)>
                </Route>
                <Route
                  component={[Function]}
                  path="/"
                />
                <Redirect
                  push={false}
                  to="/not_found"
                />
              </Switch>
              <Connect(ResultsBar) />
              <Switch>
                <Route
                  component={[Function]}
                  exact={true}
                  path="/"
                />
                <Route
                  component={[Function]}
                  path="/film/:id"
                />
                <Route
                  component={[Function]}
                  path="/search"
                />
                <Redirect
                  push={false}
                  to="/not_found"
                />
              </Switch>
              <Footer />
            </div>,
            "path": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Switch>
                  <Route
                    path="/film/:id"
                  >
                    <Connect(Header)>
                      <Route
                        component={[Function]}
                        path="/film/:id"
                      />
                    </Connect(Header)>
                  </Route>
                  <Route
                    component={[Function]}
                    path="/"
                  />
                  <Redirect
                    push={false}
                    to="/not_found"
                  />
                </Switch>,
                <Connect(ResultsBar) />,
                <Switch>
                  <Route
                    component={[Function]}
                    exact={true}
                    path="/"
                  />
                  <Route
                    component={[Function]}
                    path="/film/:id"
                  />
                  <Route
                    component={[Function]}
                    path="/search"
                  />
                  <Redirect
                    push={false}
                    to="/not_found"
                  />
                </Switch>,
                <Footer />,
              ],
              "className": "core-page",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <Route
                      path="/film/:id"
                    >
                      <Connect(Header)>
                        <Route
                          component={[Function]}
                          path="/film/:id"
                        />
                      </Connect(Header)>
                    </Route>,
                    <Route
                      component={[Function]}
                      path="/"
                    />,
                    <Redirect
                      push={false}
                      to="/not_found"
                    />,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <Connect(Header)>
                        <Route
                          component={[Function]}
                          path="/film/:id"
                        />
                      </Connect(Header)>,
                      "path": "/film/:id",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <Route
                          component={[Function]}
                          path="/film/:id"
                        />,
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "component": [Function],
                          "path": "/film/:id",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "component": [Function],
                      "path": "/",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "push": false,
                      "to": "/not_found",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <Route
                      component={[Function]}
                      exact={true}
                      path="/"
                    />,
                    <Route
                      component={[Function]}
                      path="/film/:id"
                    />,
                    <Route
                      component={[Function]}
                      path="/search"
                    />,
                    <Redirect
                      push={false}
                      to="/not_found"
                    />,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "component": [Function],
                      "exact": true,
                      "path": "/",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "component": [Function],
                      "path": "/film/:id",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "component": [Function],
                      "path": "/search",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "push": false,
                      "to": "/not_found",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Switch>
          <Route
            component={[Function]}
            exact={true}
            path="/not_found"
          />
          <Route
            path="/"
          >
            <div
              className="core-page"
            >
              <Switch>
                <Route
                  path="/film/:id"
                >
                  <Connect(Header)>
                    <Route
                      component={[Function]}
                      path="/film/:id"
                    />
                  </Connect(Header)>
                </Route>
                <Route
                  component={[Function]}
                  path="/"
                />
                <Redirect
                  push={false}
                  to="/not_found"
                />
              </Switch>
              <Connect(ResultsBar) />
              <Switch>
                <Route
                  component={[Function]}
                  exact={true}
                  path="/"
                />
                <Route
                  component={[Function]}
                  path="/film/:id"
                />
                <Route
                  component={[Function]}
                  path="/search"
                />
                <Redirect
                  push={false}
                  to="/not_found"
                />
              </Switch>
              <Footer />
            </div>
          </Route>
        </Switch>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Route
              component={[Function]}
              exact={true}
              path="/not_found"
            />,
            <Route
              path="/"
            >
              <div
                className="core-page"
              >
                <Switch>
                  <Route
                    path="/film/:id"
                  >
                    <Connect(Header)>
                      <Route
                        component={[Function]}
                        path="/film/:id"
                      />
                    </Connect(Header)>
                  </Route>
                  <Route
                    component={[Function]}
                    path="/"
                  />
                  <Redirect
                    push={false}
                    to="/not_found"
                  />
                </Switch>
                <Connect(ResultsBar) />
                <Switch>
                  <Route
                    component={[Function]}
                    exact={true}
                    path="/"
                  />
                  <Route
                    component={[Function]}
                    path="/film/:id"
                  />
                  <Route
                    component={[Function]}
                    path="/search"
                  />
                  <Redirect
                    push={false}
                    to="/not_found"
                  />
                </Switch>
                <Footer />
              </div>
            </Route>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "component": [Function],
              "exact": true,
              "path": "/not_found",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <div
                className="core-page"
              >
                <Switch>
                  <Route
                    path="/film/:id"
                  >
                    <Connect(Header)>
                      <Route
                        component={[Function]}
                        path="/film/:id"
                      />
                    </Connect(Header)>
                  </Route>
                  <Route
                    component={[Function]}
                    path="/"
                  />
                  <Redirect
                    push={false}
                    to="/not_found"
                  />
                </Switch>
                <Connect(ResultsBar) />
                <Switch>
                  <Route
                    component={[Function]}
                    exact={true}
                    path="/"
                  />
                  <Route
                    component={[Function]}
                    path="/film/:id"
                  />
                  <Route
                    component={[Function]}
                    path="/search"
                  />
                  <Redirect
                    push={false}
                    to="/not_found"
                  />
                </Switch>
                <Footer />
              </div>,
              "path": "/",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Switch>
                    <Route
                      path="/film/:id"
                    >
                      <Connect(Header)>
                        <Route
                          component={[Function]}
                          path="/film/:id"
                        />
                      </Connect(Header)>
                    </Route>
                    <Route
                      component={[Function]}
                      path="/"
                    />
                    <Redirect
                      push={false}
                      to="/not_found"
                    />
                  </Switch>,
                  <Connect(ResultsBar) />,
                  <Switch>
                    <Route
                      component={[Function]}
                      exact={true}
                      path="/"
                    />
                    <Route
                      component={[Function]}
                      path="/film/:id"
                    />
                    <Route
                      component={[Function]}
                      path="/search"
                    />
                    <Redirect
                      push={false}
                      to="/not_found"
                    />
                  </Switch>,
                  <Footer />,
                ],
                "className": "core-page",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <Route
                        path="/film/:id"
                      >
                        <Connect(Header)>
                          <Route
                            component={[Function]}
                            path="/film/:id"
                          />
                        </Connect(Header)>
                      </Route>,
                      <Route
                        component={[Function]}
                        path="/"
                      />,
                      <Redirect
                        push={false}
                        to="/not_found"
                      />,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <Connect(Header)>
                          <Route
                            component={[Function]}
                            path="/film/:id"
                          />
                        </Connect(Header)>,
                        "path": "/film/:id",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "children": <Route
                            component={[Function]}
                            path="/film/:id"
                          />,
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "class",
                          "props": Object {
                            "component": [Function],
                            "path": "/film/:id",
                          },
                          "ref": null,
                          "rendered": null,
                          "type": [Function],
                        },
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "component": [Function],
                        "path": "/",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "push": false,
                        "to": "/not_found",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <Route
                        component={[Function]}
                        exact={true}
                        path="/"
                      />,
                      <Route
                        component={[Function]}
                        path="/film/:id"
                      />,
                      <Route
                        component={[Function]}
                        path="/search"
                      />,
                      <Redirect
                        push={false}
                        to="/not_found"
                      />,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "component": [Function],
                        "exact": true,
                        "path": "/",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "component": [Function],
                        "path": "/film/:id",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "component": [Function],
                        "path": "/search",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "push": false,
                        "to": "/not_found",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
